[gd_scene load_steps=11 format=3 uid="uid://b3urfk13ajffu"]

[ext_resource type="Script" path="res://components/playfield.gd" id="1_8rlbo"]
[ext_resource type="AudioStream" uid="uid://c7gmpd30i5blq" path="res://assets/samples/hit.mp3" id="2_0sdv3"]
[ext_resource type="Script" path="res://components/util/beat_indicator.gd" id="2_3he8f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bt1jq"]
bg_color = Color(0.343714, 0.389369, 0.512391, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ld243"]
bg_color = Color(0.8, 0.8, 0.8, 0.015)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4o1h"]
bg_color = Color(0.8, 0.8, 0.8, 0.0392157)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wq6r6"]
bg_color = Color(0.8, 0.8, 0.8, 0.0784314)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjopx"]
bg_color = Color(0.8, 0.8, 0.8, 0.196078)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wjcnc"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7ryc"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Playfield" type="PanelContainer"]
clip_contents = true
custom_minimum_size = Vector2(400, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_bt1jq")
script = ExtResource("1_8rlbo")

[node name="HitSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0sdv3")
max_polyphony = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7
alignment = 1

[node name="AlignmentLine-4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 150
theme_override_styles/separator = SubResource("StyleBoxFlat_ld243")

[node name="AlignmentLine-3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 45
theme_override_styles/separator = SubResource("StyleBoxFlat_g4o1h")

[node name="AlignmentLine-2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxFlat_wq6r6")

[node name="AlignmentLine-1" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_sjopx")

[node name="HitLine" type="HSeparator" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_wjcnc")
script = ExtResource("2_3he8f")

[node name="AlignmentLine+1" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_sjopx")

[node name="AlignmentLine+2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxFlat_wq6r6")

[node name="AlignmentLine+3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxFlat_g4o1h")

[node name="AlignmentLine+4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 150
theme_override_styles/separator = SubResource("StyleBoxFlat_ld243")

[node name="Notes" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 4

[node name="BeatIndicator" type="PanelContainer" parent="MarginContainer/GridContainer"]
self_modulate = Color(0.254902, 0.294118, 0.396078, 1)
clip_contents = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t7ryc")
script = ExtResource("2_3he8f")

[node name="HitOffsetControl" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="HitOffsetLabel" type="RichTextLabel" parent="MarginContainer/HitOffsetControl"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -37.0
offset_top = -2.0
offset_bottom = 16.0
grow_horizontal = 0
theme_override_font_sizes/normal_font_size = 13
text = "âˆ’0 ms"
fit_content = true
autowrap_mode = 0
